--- a/medium/css/style.css
+++ b/medium/css/style.css
@@ -68,30 +68,23 @@ button{
     display:flex;
     background-color:#aed9e6;
     width:100%;
-    height:54h;
     justify-content: space-evenly;
     border-bottom: 1px solid black;
+    padding-top: 40px;
 
 }
 
 .box1{
     background-color:#aed9e6;
-    height:54vh;
-    width:90vh;
-
-    
+    width:30%;
 }
 
 img{
     width: 339px;
-    padding: 82px 25px 0px 5px;
 }
-
-.box2{
-    background-color:#aed9e6;
-    height:54vh;
-    width:50vh;
-
+.card-image{
+    width:100%;
+    object-fit: contain;
 }
 
 .big{
@@ -119,17 +112,14 @@ img{
 
 
 .bigcontainer{
-     
+     margin: 0 auto;
      padding:20px;
-     Height:150vw;
-     width:961.6px;
-     border:2px solid black;
+     width:70%;
 }
 
 .outerbox{
     /* background-color: rgb(180, 180, 41); */
-    width:60vw;
-    height:140px;
+    width:90%;
     display:flex;
     justify-content: space-between;
     margin:5px;
@@ -138,29 +128,24 @@ img{
 
 .outerbox1{
     /* background-color:red; */
-    width:30vw;
-    height: 140px;;
-    position: relative;
-    
-    left: 145px;
+    width:60%;
 
 
 }
 .outerbox2{
     /* background-color: rgb(48, 114, 168); */
-    width:20vw;
-    height: 140px;;
-    
+    width:30%;
+    height:100%;
 }
-
+/* 
 img{
     margin: 0;
     padding:0;
     width:307px
     /* background-color: lawngreen;
-    border:2px solid black; */
+    border:2px solid black; 
+}*/
 
-}
 
 .innerbox1{
     /* background-color: blue; */
@@ -219,20 +204,26 @@ img{
     /* background-color: khaki; */
     /* height:28px; */
     margin: 5px 0 0 0;
+    width:70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 
     /* display:flex;
     justify-content:space-between; */
 }
 .innerbox4_1_child{
     
-    padding:5px 15px;
+    padding:5px 15px 5px 0px;
     
     /* display:flex; */
     
 }
 .fil{
-    background-color: grey;
+    background-color: rgb(202, 199, 199);
+    padding: 3px 14px 3px 14px;
     border-radius: 19px;
+
 }
 
 .innerbox4_1_1{
@@ -257,10 +248,7 @@ img{
     text-align: left;
 }
 
-}
-
 .fas{
-
     color:blue;
 }
 
